# nearest_frontier_planner

./: CMakeLists.txt  package.xml  readme.md
include/nearest_frontier_planner/: commands.h  exploration_planner.h  grid_map.h  map_inflation_tool.h  nearest_frontier_planner.h  robot_navigator.h
launch/: nearest_frontier_planner.launch  tutorial3_icp_nfp.launch
param/: navigator.yaml  ros.yaml
src/: explore_client.cpp  get_map_client.cpp  localize_client.cpp  map_inflation_tool.cpp  navigator.cpp  nearest_frontier_planner.cpp  robot_navigator.cpp  set_goal_client.cpp
